<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dc_measurements</name>
  <version>0.1.0</version>
  <description>Collect data with measurement plugins</description>
  <maintainer email="d.bensoussan@proton.me">David Bensoussan</maintainer>
  <license>MPL-2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>dc_core</depend>
  <depend>dc_interfaces</depend>
  <depend>dc_util</depend>
  <depend>ffmpeg</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>nlohmann_json_schema_validator_vendor</depend>
  <depend>pkg-config</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>yaml_cpp_vendor</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <dc_core plugin="${prefix}/condition_plugin.xml" />
    <dc_core plugin="${prefix}/measurement_plugin.xml" />
  </export>
</package>
