<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>dc_services</name>
  <version>0.6.1</version>
  <description>Collect uptime data</description>
  <maintainer email="d.bensoussan@proton.me">David Bensoussan</maintainer>
  <license>MPL-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>dc_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
