<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>dc_simulation</name>
  <version>0.6.1</version>
  <description>Warehouse simulation.</description>
  <maintainer email="d.bensoussan@proton.me">David Bensoussan</maintainer>
  <license>MPL-2.0</license>

  <exec_depend>aws_robomaker_small_warehouse_world</exec_depend>
  <exec_depend>dc_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
