<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dc_util</name>
  <version>1.1.0</version>
  <description>TODO</description>
  <maintainer email="d.bensoussan@proton.me">David Bensoussan</maintainer>
  <license>MPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>launch</depend>
  <depend>launch_testing_ament_cmake</depend>
  <depend>nav2_util</depend>
  <depend>dc_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
