<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dc_util</name>
  <version>0.1.0</version>
  <description>General headers used in DC</description>
  <maintainer email="d.bensoussan@proton.me">David Bensoussan</maintainer>
  <license>MPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libboost-program-options-dev</build_depend>

  <depend>boost</depend>
  <depend>dc_common</depend>
  <depend>launch</depend>
  <depend>launch_testing_ament_cmake</depend>
  <depend>nav2_util</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>yaml_cpp_vendor</depend>

  <exec_depend>libboost-program-options</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
