<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>fluent_bit_plugins</name>
    <version>2.0.0</version>
    <description>A vendor package for An End to End Observability Pipeline</description>
    <maintainer email="d.bensoussan@proton.me">David Bensoussan</maintainer>
    <license>MPL-2.0</license>

    <build_depend>golang-go</build_depend>

    <depend>dc_interfaces</depend>
    <depend>fluent_bit_vendor</depend>
    <depend>rcl</depend>
    <depend>rclc</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
